test/compile_errors/err_void_not_builtin_type.w
//! expect-check-fail: unknown type 'void'; With uses Unit for no value and c_void for C void pointers

fn bad_return() -> void:
    return

fn main:
    bad_return()
